Update AuctionManager.java